# bulletproofs

./: Cargo.toml  README.md
benches/: generators.rs  range_proof.rs  scalar_range_proof.rs
docs/: r1cs-docs-example.md
src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  util.rs
src/r1cs/: mod.rs  prover.rs  verifier.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: r1cs.rs  range_proof.rs
