[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - ensure yoloproofs was disabled in an atomic (revertable) commit
# - update CHANGELOG
version = "3.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2021"

[dependencies]
curve25519-dalek = { version = ">= 4.0, < 4.2", features = ["serde", "rand_core", "digest"] }
subtle = { version = "2", default-features = false }
sha3 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
zeroize = "1"

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.3"

[features]
default = ["std"]
# yoloproofs = []
std = ["rand", "rand/std", "thiserror"]
scalar_range_proof = []

[[test]]
name = "range_proof"

[[test]]
name = "scalar_range_proof"
required-features = ["scalar_range_proof"]

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs"]

[[bench]]
name = "linear_proof"
harness = false

